--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile">
         <div class="section_pic-container">
-            <img src="./image/ajeet.jpg" alt="ajeet kumar">
+            <img src="./image/ajeet1.jpg" alt="ajeet kumar">
         </div>
         <div class="section-text">
             <p class="section-para1">Hello, I'm</p>
@@ -82,7 +82,7 @@
     
     </section>
     <section id="skills">
-        <p class="section-text">Explore My</p>
+        <h3 class="section-text">Explore My</h3>
         <h1 class="title">Skills</h1>
         <div class="experience-container">
            <div class="about-containers">
@@ -182,7 +182,7 @@
    onclick="location.href='./#skills'">
     </section>
     <section id="projects">
-        <p class="section-text">Browse My Recent</p>
+        <h3 class="section-text">Browse My Recent</h3>
         <div class="experience-container">
             <div class="about-containers">
           <div class="details-container color-container" >
@@ -194,35 +194,35 @@
             </div>
           </div>  
           <div class="details-container color-container" >
-            <h2 class="sub-title project-title ">DrumKit</h2>
-            <p><STRONG>Using HTML, CSS and JAVASCRIPT</STRONG></p>
+            <h2 class="sub-title project-title ">Weather APP</h2>
+            <p><STRONG>Using React.js and Api</STRONG></p>
+            <div class="btn-container">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/weather-app'">Source code</button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='http://localhost:3000/my-app'">Live Demo</button>
+            </div>
+          </div> 
+          <div class="details-container color-container" >
+            <h2 class="sub-title project-title ">Image Denoising Technique</h2>
+            <p><STRONG>Using HTML, CSS, DJANGO and PYTHON </STRONG></p>
             <div class="btn-container">
                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Source code</button>
                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Live Demo</button>
             </div>
           </div> 
           <div class="details-container color-container" >
-            <h2 class="sub-title project-title ">DrumKit</h2>
-            <p><STRONG>Using HTML, CSS and JAVASCRIPT</STRONG></p>
+            <h2 class="sub-title project-title ">E-Commerce Website</h2>
+            <p><STRONG>Using HTML, CSS, PHP and MySql</STRONG></p>
             <div class="btn-container">
                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Source code</button>
                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Live Demo</button>
             </div>
           </div> 
           <div class="details-container color-container" >
-            <h2 class="sub-title project-title ">DrumKit</h2>
+            <h2 class="sub-title project-title ">Portfolio</h2>
             <p><STRONG>Using HTML, CSS and JAVASCRIPT</STRONG></p>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Source code</button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Live Demo</button>
-            </div>
-          </div> 
-          <div class="details-container color-container" >
-            <h2 class="sub-title project-title ">DrumKit</h2>
-            <p><STRONG>Using HTML, CSS and JAVASCRIPT</STRONG></p>
-            <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Source code</button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Live Demo</button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/portfolios'">Source code</button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='http://127.0.0.1:5500/index.html'">Live Demo</button>
             </div>
           </div> 
         </div>
@@ -233,7 +233,7 @@
     </section>
 
     <section id="contact">
-        <p class="section-text">Get in Touch</p>
+        <h3 class="section-text">Get in Touch</h3>
         <h1 class="title">Contact Me </h1>
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
