--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <p><STRONG>Using HTML, CSS and JAVASCRIPT</STRONG></p>
             <div class="btn-container">
                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Source code</button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Live Demo</button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='http://127.0.0.1:5501/index.html'">Live Demo</button>
             </div>
           </div>  
           <div class="details-container color-container" >
@@ -205,16 +205,16 @@
             <h2 class="sub-title project-title ">Image Denoising Technique</h2>
             <p><STRONG>Using HTML, CSS, DJANGO and PYTHON </STRONG></p>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Source code</button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Live Demo</button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/Image-Denoising-technique'">Source code</button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='http://127.0.0.1:8000/'">Live Demo</button>
             </div>
           </div> 
           <div class="details-container color-container" >
             <h2 class="sub-title project-title ">E-Commerce Website</h2>
             <p><STRONG>Using HTML, CSS, PHP and MySql</STRONG></p>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Source code</button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/drumkit'">Live Demo</button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ajeet41035/E-commerce-website'">Source code</button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='http://localhost/waste_product/user/index.php'">Live Demo</button>
             </div>
           </div> 
           <div class="details-container color-container" >
